--- a/src/Lottery.mxml
+++ b/src/Lottery.mxml
@@ -5,7 +5,7 @@
 	<mx:Script>
 		<![CDATA[
 			import com.greensock.TweenLite;
-			import com.zhangjiabo.views.SampleTitleWindow;
+			import com.zhangjiabo.views.BasicTitleWindow;
 			
 			import mx.controls.Alert;
 			import mx.controls.Image;
@@ -62,7 +62,7 @@
 					lotteryBtn.label = "开始";
 					lotteryTimer.stop();
 					imageContainer.removeChild(selectedImg);
-					PopUpManager.createPopUp(this,SampleTitleWindow,true);
+					PopUpManager.createPopUp(this,BasicTitleWindow,true);
 					for(var i:int = lotteryRandom;i<=peopleNum;i++)
 						imgArr[i] = imgArr[i+1];
 					imgArr.pop();
@@ -120,6 +120,14 @@
 				Alert.show("无法加载configuration.xml文件");
 			}
 			
+			public function removeTitleWindow():void
+			{
+				var img:Image = new Image();
+				img.width = 93;
+				img.height = 70;
+				img.source = selectedImg.source;
+				lotteryContainer.addChild(img);
+			}
 		]]>
 	</mx:Script>
 	<mx:HTTPService id="configRequest" url="assets/xml/configuration.xml" resultFormat="e4x" result="configRequest_resultHandler(event)" fault="configRequest_faultHandler(event)" />
@@ -128,6 +136,6 @@
 			<mx:Tile id="imageContainer" width="100%" height="100%" />
 		</mx:Panel>
 	</mx:HBox>
-	<mx:Button id="lotteryBtn" label="开始" click="lotteryBtn_clickHandler(event)" x="{this.width/2 - lotteryBtn.width/2}" y="90"/>
-	<mx:HBox id="lotteryContainer" width="100%" height="75" bottom="0" horizontalAlign="center" verticalAlign="bottom"/>
+	<mx:Button id="lotteryBtn" label="开始" buttonMode="true" click="lotteryBtn_clickHandler(event)" x="{this.width/2 - lotteryBtn.width/2}" y="90"/>
+	<mx:HBox id="lotteryContainer" width="100%" height="75" bottom="0" horizontalAlign="left" verticalAlign="bottom"/>
 </mx:Application>
